@@ -1,3 +1,5 @@
+Tue May 12 16:58:13 MET DST 1998 hannes
+	* changed return type of option(): none -> string
 Tue May 12 11:57:50 MET DST 1998 hannes
 	* added "lres"
 1998-05-08  Olaf Bachmann  <obachman@mathematik.uni-kl.de>
